# cinema

./: .env  Cargo.toml  Dockerfile  README.md  diesel.toml  docker-compose.yml  start.sh
.github/workflows/: rust.yml  todo.yml
cluster-config/: config.ini  ndb_1_config.bin.1
db/: init.sql
docs/: tasks.md
migrations/1_unique_emails/: down.sql  up.sql
migrations/2_reservation_complex_index/: down.sql  up.sql
migrations/4_mock_data/: down.sql  up.sql
migrations/5_movie_posters/: down.sql  up.sql
migrations/create_tables/: down.sql  up.sql
nginx/: nginx.conf
src/: db.rs  lib.rs  main.rs  models.rs  routes.rs  schema.rs  templates_structs.rs
src/extractors/: mod.rs  session_user.rs
src/forms/: auth.rs
src/handlers/: auth.rs  mod.rs  movies.rs  reservations.rs
stress-tests/: auth_helpers.py  test1.py  test2.py  test3.py  test4.py  test5.py
templates/: _auth_layout.html  _layout.css  _layout.html  error.html  greet.html  index.html  login.html  login_form.html  movie.html  movies.html  register.html  register_form.html  reservation_form.html  reservations_list.html
