[package]
name = "Cinema"
version = "0.1.0"
edition = "2024"

[dependencies]
diesel = { version = "2.1.0", features = ["mysql", "chrono"] }
dotenvy = "0.15"
axum = { version = "0.8.4", features = ["macros"] }
tokio = { version = "1.0", features = ["full", "macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
askama = "0.14.0"
htmxtools = "0.1.4"
tracing = "0.1"
tracing-subscriber = "0.3"
tower-http = { version = "0.6.4", features = ["trace"] }
displaydoc = "0.2.5"
thiserror = "2.0.12"
pretty-error-debug = "0.3.1"
chrono = "0.4.41"
